[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day08-langgraph-agent-lab"
version = "0.1.0"
description = "Starter skeleton for LangGraph agentic orchestration lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "langgraph>=0.3.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]
google = ["langchain-google-genai>=2.1.0"]
openai = ["langchain-openai>=0.3.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
sqlite = ["langgraph-checkpoint-sqlite>=2.0"]
postgres = ["langgraph-checkpoint-postgres>=2.0"]
serve = ["fastapi>=0.111", "uvicorn>=0.30"]

[project.scripts]
agent-lab = "langgraph_agent_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN"]
# ANN401: `Any` is required for provider-agnostic LLM clients and the opaque
# compiled-graph / checkpointer objects returned by LangGraph.
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
# Test functions don't need return-type annotations; skip markers force some
# imports below module top (E402); inline fixture dicts run long (E501).
"tests/*" = ["ANN201", "ANN001", "E402", "E501"]
# visualize.py is a template module: the inlined HTML/CSS lines exceed 100 cols.
"src/langgraph_agent_lab/visualize.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Optional LLM providers / checkpointers are installed via extras; don't fail
# typecheck when a provider package isn't present in the current environment.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
